tests/errors/wrong_val_57/e5.src
.IPPcode21

EXIT int@785